--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ PyNaCl = "^1.4.0"
 discord = "^1.7.3"
 gTTS = "^2.2.3"
 Flask = "^2.0.2"
+python-dotenv = "^0.19.2"
 
 [tool.poetry.dev-dependencies]
 
